--- a/frontend/src/styles/Preferences.module.scss
+++ b/frontend/src/styles/Preferences.module.scss
@@ -1,13 +1,20 @@
 .preferencesWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 25px 0 0 0;
     padding: 0;
 
     .choiceWrapper {
-        float: left;
-        margin: 0 5px 0 0;
-        width: 100px;
-        height: 40px;
+        display: block;
+        margin-bottom: 1rem;
+        width: 300px;
+        height: 60px;
         position: relative;
+
+        &:last-child {
+            margin-bottom: 1.5rem;
+        }
     }
 
     label,
@@ -18,6 +25,8 @@
         left: 0;
         right: 0;
         bottom: 0;
+        cursor: pointer;
+        z-index: 1;
     }
     input[type='radio'] {
         opacity: 0.01;
@@ -25,18 +34,17 @@
     }
 
     label {
-        padding: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border: 1px solid #ccc;
-        cursor: pointer;
+        border-radius: 50px;
         z-index: 90;
-    }
-
-    label:hover {
-        background: #ddd;
     }
 
     input[type='radio']:checked + label,
     .Checked + label {
-        background: yellow;
+        background: var(--c-green-1);
+        color: var(--c-white);
     }
 }
