--- a/frontend/src/styles/StartPage.module.scss
+++ b/frontend/src/styles/StartPage.module.scss
@@ -2,7 +2,7 @@
     // background-color: var(--green-dark);
     height: 100vh;
     width: 100vw;
-    // background-image: url('../../public/startBackground.jpg');
+    // // background-image: url('../../public/startBackground.jpg');
 }
 
 .startButton {
