--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -2,17 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "@styles/variables.scss";
+
 :root {
-    --c-green-1: #009245;
-    --c-green-1: #006837;
+    --green-light: #009245;
+    --green-dark: #006837;
 
-    --c-red: #d54444;
+    --red: #d54444;
 
-    --c-gray-1: #f2f5f4;
-    --c-gray-2: #d6d6d6;
-    --c-gray-3: #707070;
-    --c-gray-4: #3a3a3a;
+    --gray-light: #f2f5f4;
+    --gray-2: #d6d6d6;
+    --gray-3: #707070;
+    --gray-dark: rgb(58, 58, 58);
 
-    --c-black: #000000;
-    --c-white: #ffffff;
+    --black: #000000;
+    --white: #ffffff;
+
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    padding-top: 50px;
+}
+
+h1 {
+    font-family: $font-family;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 80px;
+    color: var(--gray-light);
+}
+
+h2 {
+    font-family: $font-family;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+    color: var(--gray-light);
+}
+
+h3 {
+    font-family: $font-family;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 35px;
+    color: var(--gray-dark);
+}
+
+h4 {
+    font-family: $font-family;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 25px;
+    color: var(--gray-dark);
+}
+
+p {
+    font-family: $font-family;
+    font-weight: 100;
+    font-style: normal;
+    font-size: 20px;
+    color: var(--gray-dark);
 }
