--- a/frontend/src/styles/Intolerances.module.scss
+++ b/frontend/src/styles/Intolerances.module.scss
@@ -25,13 +25,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 2px solid var(--gray-4);
+        border: 2px solid var(--gray-dark);
         border-radius: 15px;
         z-index: 90;
         font-weight: 500;
         font-size: 0.875rem; /* 14px */
         line-height: 1.25rem; /* 20px */
-        color: var(--gray-4);
+        color: var(--gray-dark);
     }
 
     input[type='checkbox']:checked + label,
