--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -6,7 +6,8 @@
 
 :root {
     --green-light: #009245;
-    --green-dark: 0, 104, 55;
+    --green-dark: rgb(0, 104, 55);
+    --green-dark-background: rgba(0, 104, 55, 0.9);
 
     --red: #d54444;
 
