--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
     width: 60px;
     height: 45px;
     position: relative;
+    z-index: 10000;
     margin: 50px auto;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
