--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -2,5 +2,6 @@ $font-family: "degular", sans-serif;
 
 $box-shadow: 5px 5px 5px 5px rgba(58, 58, 58, 0.1);
 $boder-radius: 20px;
+$small-boder-radius: 10px;
 
 $button-radius: 50px;
