--- a/frontend/src/styles/App.module.scss
+++ b/frontend/src/styles/App.module.scss
@@ -3,10 +3,11 @@
     width: 100vw;
     background-image: url('../../public/startBackground.jpg');
 }
+
 .greenShadow {
     height: 100vh;
     width: 100vw;
     background-color: var(--green-dark-background);
-    position: fixed;
+    // position: fixed;
     padding-top: 50px;
 }
