--- a/frontend/src/styles/DetailRecipe.module.scss
+++ b/frontend/src/styles/DetailRecipe.module.scss
@@ -57,8 +57,10 @@
 }
 
 .numberFrame {
-    width: 50px;
-    height: 50px;
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 50px;
+    max-height: 50px;
     border: 2px solid var(--gray-dark);
     border-radius: $small-boder-radius;
     display: flex;
