--- a/frontend/src/styles/Intolerances.module.scss
+++ b/frontend/src/styles/Intolerances.module.scss
@@ -7,7 +7,7 @@
     &:hover {
         label {
             background-color: var(--green-light);
-            color: var(--gray-light);
+            color: var(--white);
             border: none;
         }
     }
