--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -8,19 +8,22 @@
     transition: opacity 0.2s ease-in-out;
     z-index: 1000;
 }
+
 .greenShadow {
     height: 100vh;
     width: 100vw;
-    background-color: var(--green-dark-background);
+    background-color: var(--green-dark);
     position: fixed;
     padding-top: 50px;
 }
+
 .text {
     width: 80%;
     margin-inline: auto;
     text-align: right;
     padding-top: 300px;
 }
+
 .heading {
     padding-top: 5px;
     padding-bottom: 5px;
