--- a/frontend/src/styles/App.module.scss
+++ b/frontend/src/styles/App.module.scss
@@ -7,7 +7,7 @@
 .greenShadow {
     height: 100vh;
     width: 100vw;
-    background-color: var(--green-dark-background);
+    background-color: var(--green-dark);
     // position: fixed;
     padding-top: 50px;
 }
