--- a/frontend/src/styles/Preferences.module.scss
+++ b/frontend/src/styles/Preferences.module.scss
@@ -18,7 +18,7 @@
 
             label {
                 background-color: var(--green-light);
-                color: var(--gray-light);
+                color: var(--white);
                 border: none;
             }
         }
