--- a/frontend/src/styles/WeekOverview.module.scss
+++ b/frontend/src/styles/WeekOverview.module.scss
@@ -7,7 +7,7 @@
 }
 
 .weekplanBox {
-    background-color: var(--gray-light);
+    background-color: var(--white);
     width: 100%;
     height: 300px;
     box-shadow: $box-shadow;
