--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -81,7 +81,7 @@ p {
     }
 
     input {
-        border: 2px solid #007370;
+        border: 2px solid var(--green-dark);
         border-radius: 15px;
         padding: 0rem 0.75rem;
         height: 50px;
@@ -93,7 +93,7 @@ p {
 }
 
 .btn-submit {
-    background-color: var(--green-light);
+    background-color: var(--green-dark);
     border-radius: 60px;
     padding: 0.5rem 1.5rem;
     width: fit-content;
