--- a/frontend/src/styles/App.module.scss
+++ b/frontend/src/styles/App.module.scss
@@ -1,13 +1,13 @@
 .background {
     height: 100vh;
     width: 100vw;
-    background-image: url('../../public/startBackground.jpg');
+    // background-image: url('../../public/startBackground.jpg');
 }
 
 .greenShadow {
     height: 100vh;
     width: 100vw;
-    background-color: var(--green-dark);
+    // background-color: var(--green-dark);
     // position: fixed;
     padding-top: 50px;
 }
