--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -12,7 +12,8 @@ $font-family-headline: "BebasNeue";
 $font-family-text: "Inter-Regular";
 
 $box-shadow: 5px 5px 5px 5px rgba(58, 58, 58, 0.1);
+$boder-radius-xs: 10px;
 $boder-radius: 20px;
-$small-boder-radius: 10px;
+$boder-radius-m: 30px;
 
 $button-radius: 50px;
