--- a/frontend/src/styles/Preferences.module.scss
+++ b/frontend/src/styles/Preferences.module.scss
@@ -1,13 +1,13 @@
 .preferencesWrapper {
-    display: flex;
+    display: block;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
 
     .choiceWrapper {
         display: block;
         margin-bottom: 1.5rem;
-        width: 80%;
-        height: 60px;
+        width: 100%;
+        height: 80px;
         position: relative;
 
         &:last-child {
@@ -15,7 +15,6 @@
         }
 
         &:hover {
-
             label {
                 background-color: var(--green-light);
                 color: var(--white);
@@ -33,15 +32,11 @@
         bottom: 0;
         cursor: pointer;
         z-index: 1;
-
-
-
     }
 
     input[type='radio'] {
         opacity: 0.01;
         z-index: 100;
-
     }
 
     label {
@@ -58,15 +53,13 @@
         /* 28px */
         text-transform: capitalize;
         color: var(--gray-dark);
-
+        padding-left: 3rem;
     }
 
-    input[type='radio']:checked+label,
-    .Checked+label {
+    input[type='radio']:checked + label,
+    .Checked + label {
         background-color: var(--green-dark);
         color: var(--white);
         border: none;
-
-
     }
 }
