--- a/frontend/src/styles/App.module.scss
+++ b/frontend/src/styles/App.module.scss
@@ -1,6 +1,8 @@
 .background {
     height: 100vh;
     width: 100vw;
+    background-color: var(--green-light);
+    padding-top: 50px;
     // background-image: url('../../public/startBackground.jpg');
 }
 
