--- a/frontend/src/styles/Preferences.module.scss
+++ b/frontend/src/styles/Preferences.module.scss
@@ -1,7 +1,16 @@
+.scrolling {
+    display: flex;
+    justify-content: center;
+    width: 110%;
+    overflow-y: scroll;
+}
+
 .preferencesWrapper {
     display: block;
     flex-direction: column;
     align-items: left;
+    margin-right: 100px;
+    width: 100%;
 
     .choiceWrapper {
         display: block;
@@ -37,6 +46,9 @@
     input[type='radio'] {
         opacity: 0.01;
         z-index: 100;
+        width: 100%;
+        height: 100%;
+        border-radius: 50px;
     }
 
     label {
@@ -52,7 +64,7 @@
         line-height: 1.75rem;
         /* 28px */
         text-transform: capitalize;
-        color: var(--gray-dark);
+        // color: var(--gray-dark);
         padding-left: 3rem;
     }
 
