--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -42,9 +42,9 @@ h1 {
     color: var(--black);
 }
 
-.h2-black {
+.h2-white {
     @extend .h2;
-    color: var(--black);
+    color: var(--white);
 }
 
 h2 {
