--- a/frontend/src/styles/WeekOverview.module.scss
+++ b/frontend/src/styles/WeekOverview.module.scss
@@ -7,43 +7,52 @@
 }
 
 .weekplanBox {
-    background-color: var(--white);
-    width: 100%;
-    height: 300px;
-    box-shadow: $box-shadow;
+    background-color: var(--green-light);
+    width: 250px;
+    height: 350px;
     border-radius: $boder-radius;
-    padding: 20px;
     margin-inline: auto;
-    margin-top: 10px;
-}
-
-.foodBox {
-    width: 150px;
-    height: 150px;
-    box-shadow: $box-shadow;
-    border-radius: $boder-radius;
     margin-top: 10px;
 
     &:hover .foodImg {
-        opacity: 0.2;
+        opacity: 0.1;
+    }
+
+    &:hover .discriptionHover {
+        opacity: 1;
     }
 
     &:hover .discriptionFood {
-        opacity: 1;
+        margin-top: -230px;
     }
+}
+
+.foodBox {
+    width: 250px;
+    height: 250px;
+    border-radius: $boder-radius;
+    margin-top: 10px;
 }
 
 .foodImg {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: $boder-radius;
+    border-radius: $boder-radius $boder-radius 0 0;
 }
 
 .discriptionFood {
+    padding: 10px;
+    transition: margin-top 0.2s;
+}
+
+.discriptionHover {
     opacity: 0;
-    transition: .2s ease;
+    transition: opacity 0.2s;
     position: absolute;
-    margin-top: -140px;
-    padding: 5px;
+    margin-top: 0px;
+}
+
+.today {
+    background-color: var(--green-dark);
 }
