--- a/frontend/src/styles/Intolerances.module.scss
+++ b/frontend/src/styles/Intolerances.module.scss
@@ -28,6 +28,9 @@
     input[type='checkbox'] {
         opacity: 0.01;
         z-index: 100;
+        width: 100%;
+        height: 100%;
+        border-radius: 50px;
     }
 
     label {
@@ -43,6 +46,7 @@
         line-height: 1.25rem;
         /* 20px */
         color: var(--gray-dark);
+        border-radius: 50px;
     }
 
     input[type='checkbox']:checked + label,
