--- a/frontend/src/styles/App.module.scss
+++ b/frontend/src/styles/App.module.scss
@@ -1,5 +1,6 @@
 .background {
     height: 100vh;
+    background-color: var(--green-light);
     // background-image: url('../../public/startBackground.jpg');
 }
 
