--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -23,7 +23,8 @@
 }
 
 body {
-    height: 100vh;
+    position: relative;
+    padding-bottom: 300px;
 }
 
 h1 {
@@ -76,6 +77,7 @@ h5 {
     font-style: normal;
     font-size: 25px;
 }
+
 .p-white {
     @extend .p;
     font-size: 16px;
