--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -1,13 +1,30 @@
-.secondTitle {
-    margin-top: -30px;
-    margin-bottom: 20px;
-}
+@import "@styles/variables.scss";
+
+
 
 .container {
-    width: 80%;
     margin-inline: auto;
     display: flex;
     justify-content: space-between;
+    margin: 3.5rem;
+    margin-bottom: 0;
+    background-color: var(--green-light);
+    height: 75px;
+    border-radius: $border-radius-full;
+
+    p {
+        font-size: 20px;
+    }
+
+
+    h4 {
+        margin-top: -30px;
+    }
+}
+
+.secondTitle {
+    margin-top: -30px;
+    margin-bottom: 20px;
 }
 
 .navIcon {
@@ -25,6 +42,7 @@
     -o-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out;
     cursor: pointer;
+
     span {
         display: block;
         position: absolute;
@@ -54,9 +72,11 @@
             -o-transform-origin: left center;
             transform-origin: left center;
         }
+
         &:nth-child(2) {
             top: 18px;
         }
+
         &:nth-child(3) {
             top: 36px;
             -webkit-transform-origin: left center;
@@ -74,10 +94,12 @@
             top: -3px;
             left: 8px;
         }
+
         &:nth-child(2) {
             width: 0%;
             opacity: 0;
         }
+
         &:nth-child(3) {
             transform: rotate(-45deg);
             top: 39px;
