--- a/frontend/src/styles/Preferences.module.scss
+++ b/frontend/src/styles/Preferences.module.scss
@@ -27,7 +27,7 @@
             label {
                 background-color: var(--green-light);
                 color: var(--white);
-                border: none;
+                border-color: var(--green-light);
             }
         }
     }
