--- a/frontend/src/styles/DetailRecipe.module.scss
+++ b/frontend/src/styles/DetailRecipe.module.scss
@@ -7,7 +7,6 @@
 }
 
 .recipeBox {
-    background-color: var(--green-light);
     width: 100%;
     border-radius: $boder-radius-m;
     padding: 0px;
@@ -21,9 +20,9 @@
 
 .foodImg {
     width: 100%;
-    height: 600px;
+    height: 550px;
     object-fit: cover;
-    border-radius: $boder-radius $boder-radius 0 0;
+    border-radius: $boder-radius;
 }
 
 .checkbox {
@@ -53,11 +52,9 @@
     }
 }
 
-
-
 .stepImg {
-    height: 260px;
-    width: 600px;
+    height: 300px;
+    width: 400px;
     margin-bottom: 20px;
     border-radius: $boder-radius-m;
     object-fit: cover;
@@ -65,6 +62,17 @@
 
 .recipeText {
     display: flex;
-    width: 80%;
+    width: 55%;
     flex-wrap: wrap;
+}
+
+.starIcon {
+    margin: 5px;
+
+    path {
+
+        &:hover {
+            fill: rebeccapurple;
+        }
+    }
 }
