--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -8,8 +8,14 @@
     src: url("../../public/fonts/Inter-Regular.ttf");
 }
 
+@font-face {
+    font-family: "Inter-Bold";
+    src: url("../../public/fonts/Inter-Bold.ttf");
+}
+
 $font-family-headline: "BebasNeue";
 $font-family-text: "Inter-Regular";
+$font-family-text-bold: "Inter-Bold";
 
 $box-shadow: 5px 5px 5px 5px rgba(58, 58, 58, 0.1);
 $boder-radius-xs: 10px;
