--- a/frontend/src/components/Intolerances/Intolerances.module.scss
+++ b/frontend/src/components/Intolerances/Intolerances.module.scss
@@ -1,6 +1,6 @@
 .intoleranceWrapper .containerField {
     display: block;
-    width: 200px;
+    width: 150px;
     height: 70px;
     position: relative;
     border-radius: 50px;
@@ -47,13 +47,51 @@
         /* 20px */
         color: var(--gray-dark);
         border-radius: 50px;
-        padding-left: 67px;
+        padding-left: 55px;
     }
 
     input[type='checkbox']:checked + label,
     .Checked + label {
         background-color: var(--green-dark);
-        color: var(--white);
+
         border: none;
+        p {
+            color: var(--white);
+        }
     }
 }
+
+// .intoleranceWrapper {
+//     span {
+//         display: flex;
+//         justify-content: space-around;
+//         align-items: center;
+//         width: 150px;
+//         height: fit-content;
+//         border: solid;
+//         border-radius: 50px;
+//         border: 2px solid var(--gray-dark);
+//         background-color: var(--white);
+
+//         &:hover {
+//             background-color: var(--green-light);
+//             color: var(--white);
+//             border: none;
+//         }
+
+//         input {
+//             position: absolute;
+//             cursor: pointer;
+//             width: inherit;
+//             height: inherit;
+//             cursor: pointer;
+//             background-color: var(--white);
+//         }
+//         input:checked + span,
+//         .Checked + span {
+//             background-color: var(--green-dark);
+//             color: var(--white);
+//             border: none;
+//         }
+//     }
+// }
