--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -15,6 +15,8 @@
 
     --red: #d54444;
 
+    --gray-5: #c5c5c5;
+
     //old dont use
     --gray-light: #f2f5f4;
     --gray-2: #d6d6d6;
@@ -25,7 +27,6 @@
 body {
     position: relative;
 }
-
 
 h1 {
     font-family: $font-family-headline;
@@ -159,7 +160,7 @@ p {
         }
     }
 
-    .swiper-horizontal>.swiper-scrollbar,
+    .swiper-horizontal > .swiper-scrollbar,
     .swiper-scrollbar.swiper-scrollbar-horizontal {
         bottom: var(--swiper-scrollbar-bottom, 0px) !important;
         background-color: var(--green-light) !important;
