changed selected text color

--- a/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
+++ b/frontend/src/components/FoodLifestyle/FoodLifestyle.module.scss
@@ -74,5 +74,8 @@
         background-color: var(--green-dark);
         color: var(--white);
         border: none;
+        p {
+            color: var(--white);
+        }
     }
 }
