changed white color (fffffa)

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -103,6 +103,7 @@ p {
         border-radius: 15px;
         padding: 0rem 0.75rem;
         height: 50px;
+        background-color: var(--white);
 
         &:focus {
             outline: unset;
