--- a/frontend/src/components/ProgressBar/ProgressBar.module.scss
+++ b/frontend/src/components/ProgressBar/ProgressBar.module.scss
@@ -1,14 +1,13 @@
-.active {
+.done {
     display: block;
     width: 1rem;
     height: 1rem;
     border-radius: 1rem;
     z-index: 2;
-    transform: scale(2);
     background-color: var(--green-dark);
 }
 
-.passive {
+.notDone {
     display: block;
     width: 1rem;
     height: 1rem;
