--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -52,6 +52,11 @@ h1 {
     color: var(--black);
 }
 
+.h2-zeyada {
+    @extend .h2;
+    font-family: var(--font-zeyada);
+}
+
 .h2-white {
     @extend .h2;
     color: var(--white);
